--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
     "babel-core": "^7.0.0-bridge.0",
@@ -25,9 +29,11 @@
     "google-map-react": "^1.1.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "i": "^0.3.6",
     "lodash.debounce": "^4.0.8",
     "next": "^7.0.0",
     "next-with-apollo": "^3.1.3",
+    "npm": "^6.9.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
